# ros_zed_data_acquisition

data_acquisition_node/: CMakeLists.txt  package.xml
data_acquisition_node/cfg/: depth_map.cfg
data_acquisition_node/include/: zed_acquisition_param.hpp  zed_data_acquisition.hpp  zed_depth_acquisition.hpp  zed_file_manager.hpp  zed_left_acquisition.hpp  zed_right_acquisition.hpp
data_acquisition_node/launch/: zed_data_acquisition.launch
data_acquisition_node/param/: zed_acquisiton_param.yaml
data_acquisition_node/scripts/: main.py
data_acquisition_node/src/: main.cpp  zed_acquisition_param.cpp  zed_data_acquisition.cpp  zed_file_manager.cpp
data_acquisition_node/src/depth_node/: main.cpp  zed_depth_acquisition.cpp
data_acquisition_node/src/left_node/: main.cpp  zed_left_acquisition.cpp
data_acquisition_node/src/right_node/: main.cpp  zed_right_acquisition.cpp
